Add Microsoft API; configure Docker to allow for VS Code debugging
