# src/models/event.js
@@ -1,4 +1,5 @@
 const mongoose = require('mongoose')
+const moment = require('moment')
 
 const schema = new mongoose.Schema({
   userId: {
@@ -18,6 +19,16 @@ const schema = new mongoose.Schema({
     required: true
   }
 }, { timestamps: true })
+
+schema.virtual('diff')
+
+schema.methods.diffForUser = function(user) {
+  const diff = {
+    value: moment(this.date).diff(moment(), user.preferredMeasurementUnit),
+    unit: user.preferredMeasurementUnit
+  }
+  return diff
+}
 
 const model = mongoose.model('Event', schema)
 
