# src/v1/routes/index.js
@@ -4,6 +4,7 @@ const google = require('./google')
 const healthCheck = require('./health-check')
 const i18n = require('./i18n')
 const me = require('./me')
+const microsoft = require('./microsoft')
 const users = require('./users')
 
 module.exports = [
@@ -13,5 +14,6 @@ module.exports = [
   healthCheck,
   i18n,
   me,
+  microsoft,
   users
 ]
